Add Basic Styling

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 
 </head>
 
 <body>
+    <div id="main-bg" class="container-fluid">
 
+    </div>
 </body>
+
 </html>
+
+
