Add Header with Explore Button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
 <body>
     <div id="main-bg" class="container-fluid">
 
+    <header id="top" class="header">
+        <div class="text-vertical-center">
+            <h1> <span class="name">Selus</span> is cool app</h1>
+            <br>
+            <br>
+            <br>
+            <a href="#screens" class="btn clear-button">Explore</a>
+        </div>
+    </header>
+
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
     </div>
 </body>
 
