Add Explore section and images

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
     </header>
 
     <section id="explore" class="explore">
-        <div class="text-center">
-            <img class="col-sm-4 one" src="images/Warstwa-3.png">
-            <img class="col-sm-4 two" src="images/Warstwa-2.png">
-            <img class="col-sm-4 three" src="images/Warstwa-4.png">
+        <div id="sound" class="container-fluid">
+            <div class="row no-gutter">
+                <img class="col-sm-4 one" src="images/Warstwa-3.png">
+                <img class="col-sm-4 two" src="images/Warstwa-2.png">
+                <img class="col-sm-4 three" src="images/Warstwa-4.png">
+            </div>
         </div>
     </section>
 
