Add features section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="#features" onclick=$("#menu-close").click();>Features</a>
             </li>
             <li>
-                <a href="#more-feautures" onclick=$("#menu-close").click();>More Features</a>
+                <a href="#more-features" onclick=$("#menu-close").click();>More Features</a>
             </li>
             <li>
                 <a href="#reviews" onclick=$("#menu-close").click();>Reviews</a>
@@ -72,9 +72,20 @@
     <section id="explore" class="explore">
         <div id="sound" class="container-fluid">
             <div class="row no-gutter">
-                <img class="col-sm-4 one" src="images/Warstwa-3.png">
-                <img class="col-sm-4 two" src="images/Warstwa-2.png">
-                <img class="col-sm-4 three" src="images/Warstwa-4.png">
+                <img class="col-sm-4 one img-responsive" src="images/Warstwa-3.png">
+                <img class="col-sm-4 two img-responsive" src="images/Warstwa-2.png">
+                <img class="col-sm-4 three img-responsive" src="images/Warstwa-4.png">
+            </div>
+        </div>
+    </section>
+
+    <section id="features" class="features">
+        <div class="container">
+            <div class="row text-center">
+                <img class="pull-left img-responsive headphone col-sm-4" src="images/Headphones.png">
+                <h1 class="col-sm-8 features-title pull-right"> <span class="name">Selus</span><span class="text"> is for music</span></h1>
+                <p class="col-sm-8 pull-right text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.
+                <a href="#more-features" class="btn clear-button pull-right features-button">View more</a></p>
             </div>
         </div>
     </section>
