Add More Features Section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,46 @@
         </div>
     </section>
 
+    <section id="more-features" class="more-features panel-height">
+        <div class="move-down row">
+          <div class="container">
+              <h1 class="centered header features"><span class="name">Selus</span> with a lot of features</h1>
+            <div class="row">
+              <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12">
+                  <img src="images/Speaker.png"></img>
+                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                </div>
+                <div class="col-xs-12">
+                  <img src="images/Activity.png"></img>
+                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-4 on-top">
+                <div class="centered">
+                  <img src="images/feature-screen.png" class="phone-screen"></img>
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12">
+                  <img src="images/Headphones1.png"></img>
+                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                </div>
+                <div class="col-xs-12">
+                  <img src="images/CD.png"></img>
+                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+    </section>
+
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
