Fix title color

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row text-center">
                 <img class="pull-left img-responsive headphone col-sm-4" src="images/Headphones.png">
-                <h1 class="col-sm-8 features-title pull-right"> <span class="name">Selus</span><span class="text"> is for music</span></h1>
+                <h1 class="col-sm-8 features-title pull-right"> <span class="name">Selus</span><span class="text white"> is for music</span></h1>
                 <p class="col-sm-8 pull-right text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.
                 <a href="#more-features" class="btn clear-button pull-right features-button">View more</a></p>
             </div>
