--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
 
     </section>
 
+    <section id="more-features-2" class="more-features-2">
+        <div class="container">
+            <div class="row text-center">
+                <img class="pull-left img-responsive col-sm-4 icon" src="images/power.png"><br><br><br>
+                <h3 class="col-sm-8 pull-left white text-left">Lorem ipsum dolor sit amet</h3>
+                <p class="col-sm-8 pull-left text-left off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.</p>
+                <img class="pull-right img-responsive col-sm-4 multi-screens" src="images/multi-screens.png">
+            </div>
+        </div>
+    </section>
+
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
