--- a/index.html
+++ b/index.html
@@ -141,6 +141,53 @@
         </div>
     </section>
 
+   <section id="reviews" class="reviews">
+    <div id="review-bg" class="container-fluid">
+        <div class="container">
+
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+              </ol>
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active review">
+                  <img src="images/Opinions.png">
+                </div>
+
+                <div class="item">
+                  <img src="images/Opinions.png">
+                </div>
+
+                <div class="item">
+                  <img src="images/Opinions.png">
+                </div>
+
+                <div class="item">
+                  <img src="images/Opinions.png">
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+        </div>
+    </div>
+   </section>
+
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
