Add review styling

--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@
     </div>
    </section>
 
+   <section id="download" class="download">
+    <div class="centered">
+        <h1 class="white">Discover new music & stuff</h1>
+        <p class="download-text off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id.<br>Morbi pharetra elit non lorem elementum iaculis. </p>
+        <img class="move-up" src="images/download.png"><br>
+        <a href="#" class="btn clear-button move-up-more">Download our app</a>
+    </div>
+  </section>
+
+  <hr class="line">
+
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
