--- a/index.html
+++ b/index.html
@@ -199,6 +199,28 @@
 
   <hr class="line">
 
+  <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Homepage</a>
+                        </li>
+                        <li><a href="#">Services</a>
+                        </li>
+                        <li><a href="#">About Us</a>
+                        </li>
+                        <li><a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 pull-right">
+                    <span class="copyright">Copyright &copy; 2015 All rights reserved by Selus</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
