--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section id="more-features" class="more-features panel-height">
         <div class="move-down row">
           <div class="container">
-              <h1 class="centered header features"><span class="name">Selus</span> with a lot of features</h1>
+              <h1 class="centered header-other features"><span class="name">Selus</span> with a lot of features</h1>
             <div class="row">
               <div class="col-xs-12 col-md-4">
                 <div class="col-xs-12">
