Fix explore spacing of images

--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
 
     <section id="explore" class="explore">
         <div id="sound" class="container-fluid">
-            <div class="row no-gutter">
-                <img class="col-sm-4 one img-responsive" src="images/Warstwa-3.png">
-                <img class="col-sm-4 two img-responsive" src="images/Warstwa-2.png">
-                <img class="col-sm-4 three img-responsive" src="images/Warstwa-4.png">
+            <div class="row">
+                <img class="img-responsive" src="images/screens-sound.png">
             </div>
         </div>
     </section>
