--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <title>Selus</title>
 
@@ -23,196 +25,196 @@
 <body>
     <div id="main-bg" class="container-fluid">
 
-    <ul class="navbar-header"
-        <li><img class="logo" src="images/Logo.png"><span class="logo-title">Selus</span></li>
-    </ul>
-    <a id="menu-toggle" href="#" class="btn toggle clear-toggle"><i class="fa fa-bars fa-2x"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Selus</a>
-            </li>
-            <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
-            </li>
-            <li>
-                <a href="#explore" onclick=$("#menu-close").click();>Explore</a>
-            </li>
-            <li>
-                <a href="#features" onclick=$("#menu-close").click();>Features</a>
-            </li>
-            <li>
-                <a href="#more-features" onclick=$("#menu-close").click();>More Features</a>
-            </li>
-            <li>
-                <a href="#reviews" onclick=$("#menu-close").click();>Reviews</a>
-            </li>
-            <li>
-                <a href="#download" onclick=$("#menu-close").click();>Download</a>
-            </li>
+        <ul class="navbar-header"
+            <li><img class="logo" src="images/Logo.png"><span class="logo-title">Selus</span></li>
         </ul>
-    </nav>
+        <a id="menu-toggle" href="#" class="btn toggle clear-toggle"><i class="fa fa-bars fa-2x"></i></a>
+        <nav id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+                <li class="sidebar-brand">
+                    <a href="#top" onclick=$("#menu-close").click();>Selus</a>
+                </li>
+                <li>
+                    <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                </li>
+                <li>
+                    <a href="#explore" onclick=$("#menu-close").click();>Explore</a>
+                </li>
+                <li>
+                    <a href="#features" onclick=$("#menu-close").click();>Features</a>
+                </li>
+                <li>
+                    <a href="#more-features" onclick=$("#menu-close").click();>More Features</a>
+                </li>
+                <li>
+                    <a href="#reviews" onclick=$("#menu-close").click();>Reviews</a>
+                </li>
+                <li>
+                    <a href="#download" onclick=$("#menu-close").click();>Download</a>
+                </li>
+            </ul>
+        </nav>
 
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1> <span class="name">Selus</span> is cool app</h1>
-            <br>
-            <br>
-            <br>
-            <a href="#explore" class="btn clear-button">Explore</a>
-        </div>
-    </header>
-
-    <section id="explore" class="explore">
-        <div id="sound" class="container-fluid">
-            <div class="row">
-                <img class="img-responsive" src="images/screens-sound.png">
+        <header id="top" class="header">
+            <div class="text-vertical-center">
+                <h1> <span class="name">Selus</span> is cool app</h1>
+                <br>
+                <br>
+                <br>
+                <a href="#explore" class="btn clear-button">Explore</a>
             </div>
-        </div>
-    </section>
+        </header>
 
-    <section id="features" class="features">
-        <div class="container">
-            <div class="row text-center">
-                <img class="pull-left img-responsive headphone col-sm-4" src="images/Headphones.png">
-                <h1 class="col-sm-8 features-title pull-right"> <span class="name">Selus</span><span class="text white"> is for music</span></h1>
-                <p class="col-sm-8 pull-right text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.
-                <a href="#more-features" class="btn clear-button pull-right features-button">View more</a></p>
-            </div>
-        </div>
-    </section>
-
-    <section id="more-features" class="more-features panel-height">
-        <div class="move-down row">
-          <div class="container">
-              <h1 class="centered header-other features"><span class="name">Selus</span> with a lot of features</h1>
-            <div class="row">
-              <div class="col-xs-12 col-md-4">
-                <div class="col-xs-12">
-                  <img src="images/Speaker.png"></img>
-                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
-                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+        <section id="explore" class="explore">
+            <div id="sound" class="container-fluid">
+                <div class="row">
+                    <img class="img-responsive" src="images/screens-sound.png">
                 </div>
-                <div class="col-xs-12">
-                  <img src="images/Activity.png"></img>
-                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
-                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+            </div>
+        </section>
+
+        <section id="features" class="features">
+            <div class="container">
+                <div class="row text-center">
+                    <img class="pull-left img-responsive headphone col-sm-4" src="images/Headphones.png">
+                    <h1 class="col-sm-8 features-title pull-right"> <span class="name">Selus</span><span class="text white"> is for music</span></h1>
+                    <p class="col-sm-8 pull-right text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.
+                    <a href="#more-features" class="btn clear-button pull-right features-button">View more</a></p>
+                </div>
+            </div>
+        </section>
+
+        <section id="more-features" class="more-features panel-height">
+            <div class="move-down row">
+              <div class="container">
+                  <h1 class="centered header-other features"><span class="name">Selus</span> with a lot of features</h1>
+                <div class="row">
+                  <div class="col-xs-12 col-md-4">
+                    <div class="col-xs-12">
+                      <img src="images/Speaker.png"></img>
+                      <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                      <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                    </div>
+                    <div class="col-xs-12">
+                      <img src="images/Activity.png"></img>
+                      <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                      <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-md-4 on-top">
+                    <div class="centered">
+                      <img src="images/feature-screen.png" class="phone-screen"></img>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-md-4">
+                    <div class="col-xs-12">
+                      <img src="images/Headphones1.png"></img>
+                      <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                      <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                    </div>
+                    <div class="col-xs-12">
+                      <img src="images/CD.png"></img>
+                      <h4 class="bold">Lorem ipsum dolor sit amet</h4>
+                      <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-4 on-top">
-                <div class="centered">
-                  <img src="images/feature-screen.png" class="phone-screen"></img>
-                </div>
-              </div>
-              <div class="col-xs-12 col-md-4">
-                <div class="col-xs-12">
-                  <img src="images/Headphones1.png"></img>
-                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
-                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
-                </div>
-                <div class="col-xs-12">
-                  <img src="images/CD.png"></img>
-                  <h4 class="bold">Lorem ipsum dolor sit amet</h4>
-                  <p class="text">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-    </section>
-
-    <section id="more-features-2" class="more-features-2">
-        <div class="container">
-            <div class="row text-center">
-                <img class="pull-left img-responsive col-sm-4 icon" src="images/power.png"><br><br><br>
-                <h3 class="col-sm-8 pull-left white text-left">Lorem ipsum dolor sit amet</h3>
-                <p class="col-sm-8 pull-left text-left off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.</p>
-                <img class="pull-right img-responsive col-sm-4 multi-screens" src="images/multi-screens.png">
-            </div>
-        </div>
-    </section>
-
-   <section id="reviews" class="reviews">
-    <div id="review-bg" class="container-fluid">
-        <div class="container">
-
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-              </ol>
-
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                <div class="item active review">
-                  <img src="images/Opinions.png">
-                </div>
-
-                <div class="item">
-                  <img src="images/Opinions.png">
-                </div>
-
-                <div class="item">
-                  <img src="images/Opinions.png">
-                </div>
-
-                <div class="item">
-                  <img src="images/Opinions.png">
-                </div>
-              </div>
-
-              <!-- Left and right controls -->
-              <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
             </div>
 
-        </div>
-    </div>
-   </section>
+        </section>
 
-   <section id="download" class="download">
-    <div class="centered">
-        <h1 class="white">Discover new music & stuff</h1>
-        <p class="download-text off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id.<br>Morbi pharetra elit non lorem elementum iaculis. </p>
-        <img class="move-up" src="images/download.png"><br>
-        <a href="#" class="btn clear-button move-up-more">Download our app</a>
-    </div>
-  </section>
-
-  <hr class="line">
-
-  <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Homepage</a>
-                        </li>
-                        <li><a href="#">Services</a>
-                        </li>
-                        <li><a href="#">About Us</a>
-                        </li>
-                        <li><a href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 pull-right">
-                    <span class="copyright">Copyright &copy; 2015 All rights reserved by Selus</span>
+        <section id="more-features-2" class="more-features-2">
+            <div class="container">
+                <div class="row text-center">
+                    <img class="pull-left img-responsive col-sm-4 icon" src="images/power.png"><br><br><br>
+                    <h3 class="col-sm-8 pull-left white text-left">Lorem ipsum dolor sit amet</h3>
+                    <p class="col-sm-8 pull-left text-left off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id. Morbi pharetra elit non lorem elementum iaculis. Curabitur aliquet lacus sit amet metus molestie ultrices vel in nibh. Sed sit amet feugiat turpis, ut bibendum velit. In et felis mauris.</p>
+                    <img class="pull-right img-responsive col-sm-4 multi-screens" src="images/multi-screens.png">
                 </div>
             </div>
+        </section>
+
+       <section id="reviews" class="reviews">
+        <div id="review-bg" class="container-fluid">
+            <div class="container">
+
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                  </ol>
+
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active review">
+                      <img src="images/Opinions.png">
+                    </div>
+
+                    <div class="item">
+                      <img src="images/Opinions.png">
+                    </div>
+
+                    <div class="item">
+                      <img src="images/Opinions.png">
+                    </div>
+
+                    <div class="item">
+                      <img src="images/Opinions.png">
+                    </div>
+                  </div>
+
+                  <!-- Left and right controls -->
+                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+
+            </div>
         </div>
-    </footer>
+       </section>
+
+       <section id="download" class="download">
+        <div class="centered">
+            <h1 class="white">Discover new music & stuff</h1>
+            <p class="download-text off-white">Consectetur adipiscing elit. Ut fermentum condimentum massa, in sagittis dolor feugiat id.<br>Morbi pharetra elit non lorem elementum iaculis. </p>
+            <img class="move-up" src="images/download.png"><br>
+            <a href="#" class="btn clear-button move-up-more">Download our app</a>
+        </div>
+      </section>
+
+      <hr class="line">
+
+      <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul class="list-inline quicklinks">
+                            <li><a href="#">Homepage</a>
+                            </li>
+                            <li><a href="#">Services</a>
+                            </li>
+                            <li><a href="#">About Us</a>
+                            </li>
+                            <li><a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 pull-right">
+                        <span class="copyright">Copyright &copy; 2015 All rights reserved by Selus</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </div>
     <!-- jQuery -->
