Add image responsiveness

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div id="main-bg" class="container-fluid">
+    <div id="main-bg" class="container-fluid img-responsive">
 
         <ul class="navbar-header"
             <li><img class="logo" src="images/Logo.png"><span class="logo-title">Selus</span></li>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="col-xs-12 col-md-4 on-top">
                     <div class="centered">
-                      <img src="images/feature-screen.png" class="phone-screen"></img>
+                      <img src="images/feature-screen.png" class="phone-screen img-responsive"></img>
                     </div>
                   </div>
                   <div class="col-xs-12 col-md-4">
